feat : 알림 구현 (약식) / 현진